# managerbot

./: .env.example  .gitignore  DOCS_MAP_MANAGERBOT_V1.md  Dockerfile  README_MANAGERBOT_V1.md  docker-compose.yml
docs/: 10_architecture_managerbot.md  20_domain_model_manager_cases.md  25_case_statuses_and_routing.md  30_managerbot_panels_and_navigation.md  35_manager_reply_flow.md  40_managerbot_workdesk_and_hot_tasks.md  42_managerbot_search_filters_archive_priority.md  44_managerbot_customer_card_and_order_actions.md  60_data_model_postgres_managerbot.md  90_pr_plan_managerbot.md  (+24 more)
managerbot/: pyproject.toml
managerbot/app/: __main__.py  logging.py  main.py  models.py
managerbot/app/bot/: callbacks.py  handlers.py  keyboards.py  panel_manager.py
managerbot/app/config/: settings.py
managerbot/app/db/: session.py
managerbot/app/repositories/: contracts.py  fakes.py  sql.py
managerbot/app/services/: access.py  ai_cache.py  ai_reader.py  ai_recommender.py  ai_state.py  compose.py  delivery.py  escalation.py  manager_surface.py  navigation.py  notifications.py  order_actions.py  priority.py  rendering.py  sla.py
managerbot/app/state/: manager_session.py
managerbot/tests/: test_access.py  test_ai_reader.py  test_compose_state.py  test_erg2_behavior.py  test_erg3_customer_contact.py  test_erg4_order_actions.py  test_erg5_release_hardening.py  test_navigation_state.py  test_notifications_and_sla.py  test_ops1_env_contract.py  test_presence.py  test_queue_and_case_views.py  test_sql_repositories_integration.py  test_startup_smoke.py  test_workdesk_hot_tasks.py
